[project]
name = "pi3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy==1.26.4",
    "pillow",
    "opencv-python",
    "plyfile",
    "huggingface_hub",
    "safetensors>=0.5.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "cu124" }
torchvision = { index = "cu124" }
torchaudio = { index = "cu124" }
