[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "pillow",
    "opencv-python",
    "plyfile",
    "huggingface_hub",
    "safetensors>=0.5.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "cu121" }
torchvision = { index = "cu121" }
torchaudio = { index = "cu121" }
